# Polynomial-Calculator

./: CMakeLists.txt  README.md
src/: History.cpp  History.h  Normal.cpp  Normal.h  Normal_GUI.cpp  Normal_GUI.h  Polynomial.cpp  Polynomial.h  Polynomial_GUI.cpp  Polynomial_GUI.h  README.md  StartupDialog.cpp  StartupDialog.h  main.cpp  test.cpp
